통계 제외 마무리

--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,21 @@
 			<version>2.55.0</version>
 		</dependency>
 
+		<!--크롤링 셀레니움-->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.8.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<resources>
